manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leapfrogui
  namespace: leapfrogai
spec:
  selector:
    matchLabels:
      app: leapfrogui
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: leapfrogui
    spec:
      containers:
        - name: frontend
          image: 77373/leapfrogui:0.0.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '64Mi'
              cpu: '500m'
            limits:
              memory: '128Mi'
              cpu: '1000m'
