manifests/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leapfrogui
  namespace: leapfrogai
spec:
  gateways:
    - istio-system/tenant
  hosts:
    - leapfrogui.bigbang.dev
  http:
    - route:
        - destination:
            host: leapfrogui-svc
            port:
              number: 3000
